# rOtterna-lib

./: Cargo.toml
assets/: MEGALOVANIA.sm  Metro.sm  Turbocharger.sm  ZanderTwo.sm
examples/: load_sm.rs  to_osu.rs
output/: MEGALOVANIA_Challenge.osu  turbocharger.osu
src/: lib.rs  structs.rs  utils.rs
src/converter/: mod.rs  osu.rs
src/decoding/: decode.rs
