[package]
name = "rotterna-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Glubus/r-resources"
authors = ["Glubus"]
keywords = ["resources", "build-time", "xml", "config"]
categories = ["config", "development-tools::build-utils"]
readme = "README.md"
description = "A library for parsing and converting StepMania files to osu! files"

[dependencies]
regex = "1.12.2"
